quoting-CypressTK1/force-app/main/default/objects/Quote__c/fields/CreateSimpleScenarios__c.field-meta.xml
<CustomField>
    <fullName>CreateSimpleScenarios__c</fullName>
    <formula>$CustomMetadata.ProvusSetup__mdt.Standard.CreateSimpleScenarios__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Simple Scenarios</label>
    <type>Checkbox</type>
</CustomField>