quoting-CypressTK1/force-app/main/default/objects/Quote__c/fields/IsTransient__c.field-meta.xml
<CustomField>
    <fullName>IsTransient__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsTransient</label>
    <type>Checkbox</type>
</CustomField>