quoting-CypressTK1/force-app/main/default/objects/Quote__c/fields/LaborUnits__c.field-meta.xml
<CustomField>
    <fullName>LaborUnits__c</fullName>
    <defaultValue>&apos;Headcount&apos;</defaultValue>
    <label>Labor Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headcount</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>