quoting-CypressTK1/force-app/main/default/objects/Quote__c/fields/MarginPercentRounded__c.field-meta.xml
<CustomField>
    <fullName>MarginPercentRounded__c</fullName>
    <formula>MarginPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>