quoting-CypressTK1/force-app/main/default/objects/Quote__c/fields/TimePeriodsAlignment__c.field-meta.xml
<CustomField>
    <fullName>TimePeriodsAlignment__c</fullName>
    <label>Time Periods Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Defined Calendar</fullName>
            </value>            
            <value>
                <fullName>Weekday Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>