quoting-CypressTK1/force-app/main/default/objects/Quote__c/fields/TotalAmountRounded__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountRounded__c</fullName>
    <formula>TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>